Fix Monaco overflow problem.

--- a/editor/index.css
+++ b/editor/index.css
@@ -2,10 +2,10 @@ body { overflow: hidden; font-variant: none; background-color: #444; color: #eee
 .main-container { display: flex; position: absolute; top: 0; right: 0; bottom: 0; left: 0 }
 .left-container { flex: 3; display: flex; flex-direction: column; overflow: hidden }
 .left-top-container { flex: 0 }
-.left-bottom-container { flex: 1 }
+.left-bottom-container { flex: 1; overflow: hidden }
 .right-container { flex: 3; display: flex; flex-direction: column; overflow: hidden }
 .right-top-container { flex: 0 }
-.right-bottom-container { flex: 1 }
+.right-bottom-container { flex: 1; overflow: hidden }
 .middle-container { flex: 1; display: flex; flex-direction: column; padding: 0 8px }
 .middle-space-above { margin-top: 8px }
 .generator-picker { width: 100%; background-color: #222; color: #eee; border: none; overflow-y: auto }
